вроде починил почти все и сделал почти рабочую версию шаблонника

--- a/Sunduk.PWA/Components/CAM/ContourComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ContourComponent.razor
@@ -3,7 +3,7 @@
 <MudField Label="Контур" Variant="Variant.Filled" Margin="Margin.Dense" Underline="false">
     <MudGrid Spacing="1">
         <MudItem xs="12" lg="6">
-            <MudList DisableGutters="true" Dense="true" T="string">
+            <MudList Gutters="false" Dense="true" T="string">
                 @foreach (var element in Contour)
                 {
                     <MudListItem Dense="true">
