--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
-<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
 
-    <MudGrid Spacing="1" Class="d-flex pa-1" Justify="Justify.FlexStart">
+    <MudGrid Spacing="1" Class="d-flex pa-0" Justify="Justify.FlexStart">
         <MudItem xs="6" md="4" lg="4" xl="2">
             <SectionButton Label="Калькулятор режимов" Link="/calculator" Icon="@Icons.Material.Filled.Calculate" />
         </MudItem>
