--- a/Sunduk.PWA/Dialogs/UserInputDialog.razor
+++ b/Sunduk.PWA/Dialogs/UserInputDialog.razor
@@ -12,9 +12,9 @@
 {
     [CascadingParameter] IMudDialogInstance MudDialog { get; set; }
 
-    [Parameter] public string Message { get; set; }
-    [Parameter] public bool AutoGrow { get; set; }
-    public string Input { get; set; }
+    [Parameter] public string Message { get; set; } = string.Empty;
+    [Parameter] public bool AutoGrow { get; set; } = false;
+    [Parameter] public string Input { get; set; } = string.Empty;
 
     void Submit() => MudDialog.Close(DialogResult.Ok(Input));
     void Cancel() => MudDialog.Cancel();
